# single_file_mario

./: .gitignore  CMakeLists.txt  README.md
assets/tiles/: buh2.aseprite  tils.aseprite
src/: main.c
